fix whitespace wrapping css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,6 +53,8 @@ a {
     width: 100%;
     text-align: center;
     text-shadow: 2px 2px 8px black;
+    white-space: nowrap;
+
 }
 
 #title {
